# finsight-ai

./: README.md
agent/: pyproject.toml
agent/agents/alert_agent/: __init__.py  graph.py  state.py
agent/agents/alert_agent/nodes/: __init__.py  check_alerts_node.py  load_alerts_node.py  trigger_node.py
agent/agents/analysis_agent/: __init__.py  graph.py  state.py
agent/agents/analysis_agent/nodes/: __init__.py  recommendation_node.py  risk_node.py  technical_node.py  valuation_node.py
agent/agents/data_agent/: __init__.py  graph.py  state.py
agent/agents/data_agent/nodes/: __init__.py  fetch_fundamentals_node.py  fetch_price_node.py  summary_node.py  validate_node.py
agent/agents/rag_agent/: __init__.py  graph.py  state.py
agent/agents/rag_agent/nodes/: __init__.py  answer_node.py  embed_node.py  ingest_node.py  retrieve_node.py  route_node.py
agent/agents/report_agent/: __init__.py  graph.py  state.py
agent/agents/report_agent/nodes/: __init__.py  draft_node.py  format_node.py  gather_node.py  save_node.py
agent/api/: main.py
agent/api/routers/: agent.py
agent/clients/: clients.py
agent/db/: session.py
agent/notebooks/: aapl_annual_report.txt  agents.ipynb
agent/supervisor/: __init__.py  graph.py  state.py
agent/supervisor/nodes/: __init__.py  final_response_node.py  route_node.py  run_alert_agent_node.py  run_analysis_agent_node.py  run_data_agent_node.py  run_rag_agent_node.py  run_report_agent_node.py
backend/: build.gradle
backend/src/main/java/ai/finsight/backend/model/: Alert.java  (+3 more)
backend/src/main/resources/: application.yaml
(+17 files in other folders)
