[project]
name = "finsight-agent"
version = "0.1.0"
description = "FinSight AI Agent — Financial Analysis Platform"
requires-python = ">=3.13"

dependencies = [
    # Orchestration
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-groq>=0.2.0",
    "langchain-huggingface>=0.1.0",
    "langchain-astradb>=0.5.0",

    # LLM & Embeddings
    "groq>=0.11.0",
    "sentence-transformers>=3.0.0",
    "huggingface-hub>=0.24.0",

    # Vector Store
    "astrapy>=1.5.0",

    # Financial Data
    "yfinance>=0.2.40",
    "requests>=2.32.0",       # Alpha Vantage API calls

    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",

    # Database
    "psycopg2-binary>=2.9.0",

    # Utilities
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ipykernel>=6.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "api", "vector", "utils"]